# cpp26-project-template

./: .gitignore  CMakeLists.txt  README.md  config.json  cpp26_features_demonstration.md  run_all_tests.bat  setup.bat  test_attributes_p2552r3  test_attributes_p2552r3.cpp  test_attributes_p2552r3_v2  test_attributes_p2552r3_v2.cpp  test_attributes_structured_bindings.cpp  test_basic_charset  test_basic_charset.cpp  test_constexpr_void_cast.cpp  test_delete_with_reason.cpp  test_enum_conversion  test_enum_conversion.cpp  test_lexing  test_lexing.cpp  test_non_encodable.cpp  test_pack_indexing.cpp  test_placeholder_vars.cpp  test_ref_to_temporary  test_ref_to_temporary.cpp  test_static_assert_msg.cpp  test_static_braced_init  test_static_braced_init.cpp  test_template_param_init  test_template_param_init.cpp  test_unevaluated_strings.cpp  test_uninitialized_reads  test_uninitialized_reads.cpp
examples/: CMakeLists.txt  feature_demo.cpp
include/: cpp26_features.h
scripts/install/: install_cmake.bat  install_git.bat  install_llvm.bat  install_ninja.bat  install_python.bat  install_vs_atl.bat
scripts/setup/: check_admin.bat  check_clang.bat  create_config.bat  setup_env_vars.bat  setup_vcpkg.bat  setup_vs_env.bat  verify_installs.bat
scripts/utils/: read_config.ps1
src/: cpp26_features.cpp  cpp26_test.cpp  main.cpp
tests/: CMakeLists.txt  features_test.cpp
